--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -9,11 +9,9 @@ on:
   schedule:
     - cron: '20 23 * * *'
   push:
-    branches: [ "main" ]
+    branches: [ "main", "cuda-12.2.2" ]
     # Publish semver tags as releases.
-    tags: [ 'v*.*.*' ]
-  pull_request:
-    branches: [ "main" ]
+    tags: [ 'v*.*.*', 'cuda*.*.*' ]
 
 env:
   # Use docker.io for Docker Hub if empty
